[package]
authors = ["Alex Crichton <alex@alexcrichton.com>"]
description = "Cookie and session middleware for conduit-based stacks"
license = "MIT"
name = "conduit-cookie"
repository = "https://github.com/conduit-rust/conduit-cookie"
version = "0.9.0-alpha.5"

[dependencies]
base64 = "0.13"
conduit = "0.9.0-alpha.5"
conduit-middleware = "0.9.0-alpha.4"
time = { version = "0.3", default-features = false }

[dependencies.cookie]
features = ["secure"]
version = "0.15"

[dev-dependencies]
conduit-test = "0.9.0-alpha.5"
