[package]
authors = ["Alex Crichton <alex@alexcrichton.com>"]
description = "Cookie and session middleware for conduit-based stacks"
license = "MIT"
name = "conduit-cookie"
repository = "https://github.com/conduit-rust/conduit-cookie"
version = "0.10.0"
edition = "2018"
rust-version = "1.51.0"

[dependencies]
base64 = "0.13"
conduit = "0.10.0"
conduit-middleware = "0.10.0"

[dependencies.cookie]
features = ["secure"]
version = "0.16.0"

[dev-dependencies]
conduit-test = "0.10.0"
